tests/sawn/fixtures/invalid/34_no_space_before_inline_comment.sawn
// §1.2: // immediately adjacent to a value is a parse error
a=42//comment
